k8s/8postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes: # to store data from database in a volume
        - name: postgres-storage # match volumeMounts name bellow
          persistentVolumeClaim: # to connect to the database volume
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage  # match volumes name above
              mountPath: /var/lib/postgresql/data
              subPath: postgres # specific to postgress, data save in subpath of postgres
