k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx # build a nginx container based on this nginx class
    nginx.ingress.kubernetes.io/rewrite-target: / # define how nginx behave
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod' # inform nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'true' # nginx force users to use https
spec:
  tls:
    - hosts:
        - sjl.io
        - www.sjl.io
      secretName: sjl-io
  rules:
    - host: sjl.io
    - http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
    - host: www.sjl.io
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
